Logtalk/examples/errors/plredef.lgt

:- object(plredef).
		
	write(_).
	
:- end_object.

